changes  for projects and footer

--- a/pricingbox.html
+++ b/pricingbox.html
@@ -84,7 +84,12 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-book"></i> Projects <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                                            <li><a href="project1.html">High Throughput Optical Communication System</a></li>
+                      <li><a href="project2.html">Low Noise Amplifier with Air-suspended RF MEMS Inductors</a></li>
+                      <li><a href="project3.html">Ultra-Wideband Wireless Communication ICs</a></li>
+                      <li><a href="project4.html">Ultra-Wideband Radar SoC Development</a></li>
+                      <li><a href="project5.html">Glucose Sensing Readout Circuit</a></li>
+                      <li><a href="project6.html">In Situ Sensing System for Bilogical Toxin in HABs</a></li>
                       <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
                       <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
                       <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
@@ -113,14 +118,15 @@
               <li class="active">About us</li>
             </ul>
           </div>
-          <div class="span4">
+                    <!-- <div class="span4">
             <div class="search">
               <form class="input-append">
                 <input class="search-form" id="appendedPrependedInput" type="text" placeholder="Search here.." />
                 <button class="btn btn-dark" type="submit">Search</button>
               </form>
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </section>
@@ -128,15 +134,32 @@
       <div class="container">
         <div class="row">
           <div class="span12">
-            <h3>Example pricing boxes</h3>
-            <div class="row">
+            <h3>Alumni</h3>
+            <!-- <div class="row">
               <div class="span3">
                 <div class="priceBox">
-                  <h4 class="light">Standard</h4>
+                  <h4 class="light">Name</h4>
+                   <hr>
+                  <span class="emphasis">$9.99 <em>per month</em></span>
+                  <hr>
+                  <span>Niranjan  Karandikar</span>
+                  <hr>
+                  <span>Free Live Support</span>
+                  <hr>
+                  <span>Unlimited Users</span>
+                  <hr>
+                  <span>No Time Tracking</span>
+                  <hr>
+                  <span>Enhanced SSL Security</span>
+                  <hr>
+                  <span class="emphasis-2"><a class="btn btn-theme" href="#"><i class="icon-check"></i> Order</a></span>
+                </div>
+                <div class="priceBox">
+                  <h4 class="light">Name</h4>
                   <hr>
                   <span class="emphasis">$9.99 <em>per month</em></span>
                   <hr>
-                  <span>5 GB Storage</span>
+                  <span>Niranjan  Karandikar</span>
                   <hr>
                   <span>Free Live Support</span>
                   <hr>
@@ -205,7 +228,101 @@
                   <hr>
                   <span class="emphasis-2"><a class="btn btn-theme" href="#"><i class="icon-check"></i> Order</a></span>
                 </div>
-              </div>
+              </div> 
+            </div> -->
+            <div class="row">
+                <table width="" border="1">
+                    <tbody>
+                       <tr>
+                          <th width="206" scope="row">Niranjan  Karandikar</th>
+                          <td style="width: 406px">“A  Low-Noise, Low-Power CMOS Amperometric Circuit for Glucose Sensing,” Ph.D.,  December, 2013</td>
+                          <td style="width: 127px">Intel</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Sunil  Govardhan</th>
+                          <td style="width: 406px">“A  CMOS Switched Capacitor Based Amperometric Readout Circuit for Microneedle  Glucose Sensor,” M.S., December, 2013.</td>
+                          <td style="width: 127px">Freescale</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Sujith  Dermal</th>
+                          <td style="width: 406px">“A CMOS  Conductometric Circuit for Chemical Sensing using Nanowire Sensor Arrays,”  M.S., August, 2013.</td>
+                          <td style="width: 127px">Freescale</td>
+                       </tr>
+                       <tr>
+                          <th scope="row" style="height: 51px">Varun  Shenoy</th>
+                          <td style="width: 406px; height: 51px">A CMOS  Analog Correlator based Amperometric Circuit for Glucose Sensing,” Ph.D., May,  2013.</td>
+                          <td style="height: 51px; width: 127px">ON Semiconductor</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">David  Maxwell</th>
+                          <td style="width: 406px">“Comparative  Analysis of Lithium-Chemistry Battery Fuel Gauge Algorithms on Aged Cells,”  M.S., December, 2011.</td>
+                          <td style="width: 127px">Texas Instruments</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Ju-Ching  Li</th>
+                          <td style="width: 406px">“The  Design of CMOS Impulse Generators for Ultra-Wideband Communication and Radar  Systems,” Ph.D., August, 2011.</td>
+                          <td style="width: 127px">AMD</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Daniel  McBride</th>
+                          <td style="width: 406px">“A High Fill Factor  CMOS Image Sensor for IR Camera Applications,” M.S., August, 2010. </td>
+                          <td style="width: 127px">Texas A&amp;M PhD Program</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Partha  Ghosh</th>
+                          <td style="width: 406px">"Design and  Study of Phase Locked Loop for Space Applications in Sub-Micron CMOS Technology,"  Ph.D., May 2009.</td>
+                          <td style="width: 127px"><span lang="ko">Broadcom</span></td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Ritesh  Mehta</th>
+                          <td style="width: 406px">“Balance MCML  Circuit Design for Suppressing Delta-I Noise,” M.S., December, 2007.</td>
+                          <td style="width: 127px">Broadcom</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Prasanna  Kalkura</th>
+                          <td style="width: 406px">“Pulse  Position Modulation Circuits for Impulse Radio Ultra Wideband Systems,” M.S.,  December, 2007.</td>
+                          <td style="width: 127px">Apple</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Shin-Chih  Chang</th>
+                          <td style="width: 406px">“CMOS  5th Derivative Gaussian Impulse Generator for UWB Application,” M.S.,  December, 2005.</td>
+                          <td style="width: 127px">----</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Timothy  Merkin</th>
+                          <td style="width: 406px">“A  CMOS Ultra-Wideband Differential Low Noise Amplifier,” M.S., December, 2005.</td>
+                          <td style="width: 127px">Texas Instruments</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Hemalatha  Shanmugasundaram</th>
+                          <td style="width: 406px">“CMOS  Optical transimpedance amplifier design for the PAM signaling,” M.S., August,  2005.</td>
+                          <td style="width: 127px">Intel</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Tamim B. Al-sawaf</th>
+                          <td style="width: 406px">“Analysis and Comparison between Impulse and Multiband Ultrawide  Bandwidth Communication Systems,” M.S., August 2004.</td>
+                          <td style="width: 127px">Schlumberger</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Shahzad  Nazar</th>
+                          <td style="width: 406px">"Performance/Energy Efficiency Analysis of Register Files in Superscalar  Processors," M.S., December 2003.</td>
+                          <td style="width: 127px"><span lang="ko">Apple</span></td>
+                       </tr>
+                       <tr>
+                          <th scope="row">YoungKyun  Jeong</th>
+                          <td style="width: 406px">“A  frequency adjustable CMOS pulse generator and impulse shaping circuit for the  UWB wireless communication systems,” M.S., May, 2003.</td>
+                          <td style="width: 127px">Samsung</td>
+                       </tr>
+                       <tr>
+                          <th scope="row">Shaoshu Sha</th>
+                          <td style="width: 406px"><span>Wireless Power 
+                             Transmission Based on Retro-Reflective Antenna Array, 
+                             Ph.D., December, 2013</span>
+                          </td>
+                          <td style="width: 127px">Motorola</td>
+                       </tr>
+                    </tbody>
+                 </table>
             </div>
           </div>
         </div>
@@ -214,68 +331,68 @@
     <!-- Footer
  ================================================== -->
  <footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="span4">
+        <div class="widget">
+          <h5>Interesting pages</h5>
+          <ul class="regular">
+            <li><a href="#">About our research areas</a></li>
+            <li><a href="#">How we do all stuff</a></li>
+            <li><a href="#">Our recent works</a></li>
+            <li><a href="#">Conference papers</a></li>
+            <li><a href="contact.html">Get in touch with us</a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- <div class="span4">
+        <div class="widget">
+          <h5>Flickr photostream</h5>
+          <div class="flickr-badge">
+            <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
+
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div> -->
+      <div class="span4">
+        <div class="widget">
+          <h5>How to find us</h5>
+          <address> 
+            <i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
+            Engineering Laboratory Building <br>
+            501 W. First #204 B<br>
+            Arlington, TX 76019
+            </address>
+          <p>
+            <i class="icon-phone"></i> (817) 272-1210<br>
+            <i class="icon-envelope-alt"></i> jung@uta.edu
+          </p>
+        </div>
+        <!-- <div class="widget">
+          <ul class="social">
+            <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
+          </ul>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <div class="verybottom">
     <div class="container">
       <div class="row">
-        <div class="span4">
-          <div class="widget">
-            <h5>Interesting pages</h5>
-            <ul class="regular">
-              <li><a href="#">About our research areas</a></li>
-              <li><a href="#">How we do all stuff</a></li>
-              <li><a href="#">Our recent works</a></li>
-              <li><a href="#">Conference papers</a></li>
-              <li><a href="contact.html">Get in touch with us</a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- <div class="span4">
-          <div class="widget">
-            <h5>Flickr photostream</h5>
-            <div class="flickr-badge">
-              <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-
-            </div>
-            <div class="clear"></div>
-          </div>
-        </div> -->
-        <div class="span4">
-          <div class="widget">
-            <h5>How to find us</h5>
-            <address> 
-              <i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
-              Engineering Laboratory Building <br>
-              501 W. First #204 B<br>
-              Arlington, TX 76019
-              </address>
-            <p>
-              <i class="icon-phone"></i> (817) 272-1210<br>
-              <i class="icon-envelope-alt"></i> jung@uta.edu
-            </p>
-          </div>
-          <!-- <div class="widget">
-            <ul class="social">
-              <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
-            </ul>
-          </div> -->
+        <div class="span6">
+          <p>
+            &copy; 2019 Department and Center Information
+          </p>
         </div>
       </div>
     </div>
-    <div class="verybottom">
-      <div class="container">
-        <div class="row">
-          <div class="span6">
-            <p>
-              &copy; 2019 Department and Center Information
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
 
   </div>
   <!-- end wrapper -->
