--- a/icon-variations.html
+++ b/icon-variations.html
@@ -83,7 +83,12 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-book"></i> Projects <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                                            <li><a href="project1.html">High Throughput Optical Communication System</a></li>
+                      <li><a href="project2.html">Low Noise Amplifier with Air-suspended RF MEMS Inductors</a></li>
+                      <li><a href="project3.html">Ultra-Wideband Wireless Communication ICs</a></li>
+                      <li><a href="project4.html">Ultra-Wideband Radar SoC Development</a></li>
+                      <li><a href="project5.html">Glucose Sensing Readout Circuit</a></li>
+                      <li><a href="project6.html">In Situ Sensing System for Bilogical Toxin in HABs</a></li>
                       <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
                       <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
                       <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
@@ -110,14 +115,15 @@
               <li class="active">Icon variations</li>
             </ul>
           </div>
-          <div class="span4">
+                    <!-- <div class="span4">
             <div class="search">
               <form class="input-append">
                 <input class="search-form" id="appendedPrependedInput" type="text" placeholder="Search here.." />
                 <button class="btn btn-dark" type="submit">Search</button>
               </form>
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </section>
@@ -182,68 +188,68 @@
     <!-- Footer
  ================================================== -->
  <footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="span4">
+        <div class="widget">
+          <h5>Interesting pages</h5>
+          <ul class="regular">
+            <li><a href="#">About our research areas</a></li>
+            <li><a href="#">How we do all stuff</a></li>
+            <li><a href="#">Our recent works</a></li>
+            <li><a href="#">Conference papers</a></li>
+            <li><a href="contact.html">Get in touch with us</a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- <div class="span4">
+        <div class="widget">
+          <h5>Flickr photostream</h5>
+          <div class="flickr-badge">
+            <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
+
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div> -->
+      <div class="span4">
+        <div class="widget">
+          <h5>How to find us</h5>
+          <address> 
+            <i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
+            Engineering Laboratory Building <br>
+            501 W. First #204 B<br>
+            Arlington, TX 76019
+            </address>
+          <p>
+            <i class="icon-phone"></i> (817) 272-1210<br>
+            <i class="icon-envelope-alt"></i> jung@uta.edu
+          </p>
+        </div>
+        <!-- <div class="widget">
+          <ul class="social">
+            <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
+            <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
+          </ul>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <div class="verybottom">
     <div class="container">
       <div class="row">
-        <div class="span4">
-          <div class="widget">
-            <h5>Interesting pages</h5>
-            <ul class="regular">
-              <li><a href="#">About our research areas</a></li>
-              <li><a href="#">How we do all stuff</a></li>
-              <li><a href="#">Our recent works</a></li>
-              <li><a href="#">Conference papers</a></li>
-              <li><a href="contact.html">Get in touch with us</a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- <div class="span4">
-          <div class="widget">
-            <h5>Flickr photostream</h5>
-            <div class="flickr-badge">
-              <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-
-            </div>
-            <div class="clear"></div>
-          </div>
-        </div> -->
-        <div class="span4">
-          <div class="widget">
-            <h5>How to find us</h5>
-            <address> 
-              <i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
-              Engineering Laboratory Building <br>
-              501 W. First #204 B<br>
-              Arlington, TX 76019
-              </address>
-            <p>
-              <i class="icon-phone"></i> (817) 272-1210<br>
-              <i class="icon-envelope-alt"></i> jung@uta.edu
-            </p>
-          </div>
-          <!-- <div class="widget">
-            <ul class="social">
-              <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
-              <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
-            </ul>
-          </div> -->
+        <div class="span6">
+          <p>
+            &copy; 2019 Department and Center Information
+          </p>
         </div>
       </div>
     </div>
-    <div class="verybottom">
-      <div class="container">
-        <div class="row">
-          <div class="span6">
-            <p>
-              &copy; 2019 Department and Center Information
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
 
   </div>
   <!-- end wrapper -->
