--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
                   <li class="dropdown">
                     <a href="#"><i class="icon-book"></i> Projects <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                                            <li><a href="project1.html">High Throughput Optical Communication System</a></li>
+                      <li><a href="project2.html">Low Noise Amplifier with Air-suspended RF MEMS Inductors</a></li>
+                      <li><a href="project3.html">Ultra-Wideband Wireless Communication ICs</a></li>
+                      <li><a href="project4.html">Ultra-Wideband Radar SoC Development</a></li>
+                      <li><a href="project5.html">Glucose Sensing Readout Circuit</a></li>
+                      <li><a href="project6.html">In Situ Sensing System for Bilogical Toxin in HABs</a></li>
                       <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
                       <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
                       <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
@@ -204,16 +209,30 @@
                 <i class="icon-envelope-alt"></i> jung@uta.edu
               </p>
             </div>
-            <!-- <div class="widget">
-              <ul class="social">
-                <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
-              </ul>
-            </div> -->
           </div>
+          <div class="span4">
+              <div class="widget">
+                <h5>Mailing Address</h5>
+                <address> 
+                  <i class="icon-home"></i> <strong>Box 19016,</strong><br>
+                  The University of Texas at Arlington <br>
+                  Department of Electrical Engineering<br>
+                  Arlington, TX 76019
+                </address>
+              </div>
+              <p>
+                  <i class="icon-phone"></i> (817) 272-2671<br>
+              </p>
+              <!-- <div class="widget">
+                <ul class="social">
+                  <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
+                  <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
+                  <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
+                  <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
+                  <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
+                </ul>
+              </div> -->
+            </div>
         </div>
       </div>
       <div class="verybottom">
