--- a/project4.html
+++ b/project4.html
@@ -45,7 +45,7 @@
             <!-- logo -->
             <div class="logo">
               <a href="index.html">
-							<img src="assets/img/logo.png" alt="" />
+								<img src="assets/img/logo.png" alt="" />
 							</a>
             </div>
             <!-- end logo -->
@@ -116,7 +116,7 @@
             <ul class="breadcrumb">
               <li><a href="#"><i class="icon-home"></i></a><i class="icon-angle-right"></i></li>
               <li><a href="#">Blog</a><i class="icon-angle-right"></i></li>
-              <li class="active">Blog with right sidebar</li>
+              <li class="active">Blog with left sidebar</li>
             </ul>
           </div>
                     <!-- <div class="span4">
@@ -134,6 +134,59 @@
     <section id="maincontent">
       <div class="container">
         <div class="row">
+          <div class="span4">
+            <aside>
+              <div class="widget">
+                <h4 class="rheading">Categories<span></span></h4>
+                <ul class="cat">
+                  <li><a href="#">Web design (114)</a></li>
+                  <li><a href="#">Internet news (15)</a></li>
+                  <li><a href="#">Tutorial and tips (20)</a></li>
+                  <li><a href="#">Design trends (15)</a></li>
+                  <li><a href="#">Online business (10)</a></li>
+                </ul>
+              </div>
+              <div class="widget">
+                <h4 class="rheading">Recent posts<span></span></h4>
+                <ul class="recent-posts">
+                  <li><a href="#">Lorem ipsum dolor sit amet munere commodo ut nam</a>
+                    <div class="clear">
+                    </div>
+                    <span class="date"><i class="icon-calendar"></i> 6 March, 2013</span>
+                    <span class="comment"><i class="icon-comment"></i> 4 Comments</span>
+                  </li>
+                  <li><a href="#">Sea nostrum omittantur ne mea malis nominavi insolens</a>
+                    <div class="clear">
+                    </div>
+                    <span class="date"><i class="icon-calendar"></i> 6 March, 2013</span>
+                    <span class="comment"><i class="icon-comment"></i> 2 Comments</span>
+                  </li>
+                  <li><a href="#">Eius graece recusabo no pri odio tale quo id, mea at saepe</a>
+                    <div class="clear">
+                    </div>
+                    <span class="date"><i class="icon-calendar"></i> 4 March, 2013</span>
+                    <span class="comment"><i class="icon-comment"></i> 12 Comments</span>
+                  </li>
+                  <li><a href="#">Malorum deserunt at nec usu ad graeco elaboraret at rebum</a>
+                    <div class="clear">
+                    </div>
+                    <span class="date"><i class="icon-calendar"></i> 3 March, 2013</span>
+                    <span class="comment"><i class="icon-comment"></i> 3 Comments</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="widget">
+                <h4 class="rheading">Post tags<span></span></h4>
+                <ul class="tags">
+                  <li><a href="#" class="btn">Tutorial</a></li>
+                  <li><a href="#" class="btn">Tricks</a></li>
+                  <li><a href="#" class="btn">Design</a></li>
+                  <li><a href="#" class="btn">Trends</a></li>
+                  <li><a href="#" class="btn">Online</a></li>
+                </ul>
+              </div>
+            </aside>
+          </div>
           <div class="span8">
             <!-- start article 1 -->
             <article class="blog-post">
@@ -217,59 +270,6 @@
                 <li><a href="#">Next</a></li>
               </ul>
             </div>
-          </div>
-          <div class="span4">
-            <aside>
-              <div class="widget">
-                <h4 class="rheading">Categories<span></span></h4>
-                <ul class="cat">
-                  <li><a href="#">Web design (114)</a></li>
-                  <li><a href="#">Internet news (15)</a></li>
-                  <li><a href="#">Tutorial and tips (20)</a></li>
-                  <li><a href="#">Design trends (15)</a></li>
-                  <li><a href="#">Online business (10)</a></li>
-                </ul>
-              </div>
-              <div class="widget">
-                <h4 class="rheading">Recent posts<span></span></h4>
-                <ul class="recent-posts">
-                  <li><a href="#">Lorem ipsum dolor sit amet munere commodo ut nam</a>
-                    <div class="clear">
-                    </div>
-                    <span class="date"><i class="icon-calendar"></i> 6 March, 2013</span>
-                    <span class="comment"><i class="icon-comment"></i> 4 Comments</span>
-                  </li>
-                  <li><a href="#">Sea nostrum omittantur ne mea malis nominavi insolens</a>
-                    <div class="clear">
-                    </div>
-                    <span class="date"><i class="icon-calendar"></i> 6 March, 2013</span>
-                    <span class="comment"><i class="icon-comment"></i> 2 Comments</span>
-                  </li>
-                  <li><a href="#">Eius graece recusabo no pri odio tale quo id, mea at saepe</a>
-                    <div class="clear">
-                    </div>
-                    <span class="date"><i class="icon-calendar"></i> 4 March, 2013</span>
-                    <span class="comment"><i class="icon-comment"></i> 12 Comments</span>
-                  </li>
-                  <li><a href="#">Malorum deserunt at nec usu ad graeco elaboraret at rebum</a>
-                    <div class="clear">
-                    </div>
-                    <span class="date"><i class="icon-calendar"></i> 3 March, 2013</span>
-                    <span class="comment"><i class="icon-comment"></i> 3 Comments</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="widget">
-                <h4 class="rheading">Post tags<span></span></h4>
-                <ul class="tags">
-                  <li><a href="#" class="btn">Tutorial</a></li>
-                  <li><a href="#" class="btn">Tricks</a></li>
-                  <li><a href="#" class="btn">Design</a></li>
-                  <li><a href="#" class="btn">Trends</a></li>
-                  <li><a href="#" class="btn">Online</a></li>
-                </ul>
-              </div>
-            </aside>
           </div>
         </div>
       </div>
