changes for images

--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@
                     <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
                   </div> -->
                 </li>
+                <li data-thumb="assets/img/slides/flexslider/AMIC4.jpg">
+                  <img src="assets/img/slides/flexslider/AMIC4.jpg" alt="" />
+                  <!-- <div class="flex-caption success">
+                    <h2>Rich of features</h2>
+                    <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
+                  </div> -->
+                </li>
+                <li data-thumb="assets/img/slides/flexslider/AMIC5.jpg">
+                  <img src="assets/img/slides/flexslider/AMIC5.jpg" alt="" />
+                  <!-- <div class="flex-caption success">
+                    <h2>Rich of features</h2>
+                    <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
+                  </div> -->
+                </li>                
               </ul>
             </div>
           </div>
