--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -225,16 +225,30 @@
             <i class="icon-envelope-alt"></i> jung@uta.edu
           </p>
         </div>
-        <!-- <div class="widget">
-          <ul class="social">
-            <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
-            <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
-            <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
-            <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
-            <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
-          </ul>
-        </div> -->
       </div>
+      <div class="span4">
+          <div class="widget">
+            <h5>Mailing Address</h5>
+            <address> 
+              <i class="icon-home"></i> <strong>Box 19016,</strong><br>
+              The University of Texas at Arlington <br>
+              Department of Electrical Engineering<br>
+              Arlington, TX 76019
+            </address>
+          </div>
+          <p>
+              <i class="icon-phone"></i> (817) 272-2671<br>
+          </p>
+          <!-- <div class="widget">
+            <ul class="social">
+              <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
+            </ul>
+          </div> -->
+        </div>
     </div>
   </div>
   <div class="verybottom">
